--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
   "name": "pamperito-bot",
-  "version": "0.1.0",
+  "version": "0.3.0",
   "type": "module",
-  "main": "src/index.js",
+  "main": "src/server.js",
   "scripts": {
-    "dev": "nodemon src/index.js",
-    "start": "node src/index.js"
+    "dev": "nodemon src/server.js",
+    "start": "node src/server.js",
+    "health": "node scripts/healthcheck.js",
+    "seed": "node scripts/seed.local.js"
   },
   "dependencies": {
     "axios": "^1.7.7",
-    "body-parser": "^1.20.3",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2"
